--- a/index.html
+++ b/index.html
@@ -1,40 +1,48 @@
-<script src="./cards.js?ver=1.0.0"></script>
-<script src="https://cdn.jsdelivr.net/npm/konva@9.0.0/konva.min.js"></script>
-<style type="text/css">
-	#card-designer {
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		justify-content: space-between;
-		margin-top: 20px;
-		width: 400px;
-		height: 250px;
-		background: linear-gradient(135deg, #f5f5f5 0%, #dcdcdc 100%);
-		border-radius: 20px;
-		box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
-		overflow: hidden;
-		position: relative;
-	}
-	#bg-color-picker {
-		margin: 10px;
-	}
-</style>
-<div class="dashboard-scroll container">
-	<div class="container">
-		<h1 class="mt-5 mb-4">Cards</h1>
-		<div class="row">
-			<div class="col-lg-12">
-				<div class="card mb-4">
-					<div class="card-body">
-						<input type="file" id="bg-image-input" accept="image/*">
-						<input type="color" id="bg-color-picker" value="#FFFFFF">
-						<input type="text" id="custom-text-input" placeholder="Enter custom text">
-						<button id="add-text-button">Add Text</button>
-						<div id="card-designer"></div>
-						<button id="download-button">Download Card</button>		
-					</div>					
+<!DOCTYPE html>
+<html>
+<head>
+	<title></title>
+	<script src="./cards.js?ver=1.0.0"></script>
+	<script src="https://cdn.jsdelivr.net/npm/konva@9.0.0/konva.min.js"></script>
+	<style type="text/css">
+		#card-designer {
+			display: flex;
+			flex-direction: column;
+			align-items: center;
+			justify-content: space-between;
+			margin-top: 20px;
+			width: 400px;
+			height: 250px;
+			background: linear-gradient(135deg, #f5f5f5 0%, #dcdcdc 100%);
+			border-radius: 20px;
+			box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
+			overflow: hidden;
+			position: relative;
+		}
+		#bg-color-picker {
+			margin: 10px;
+		}
+	</style>
+</head>
+<body>
+	<div class="dashboard-scroll container">
+		<div class="container">
+			<h1 class="mt-5 mb-4">Cards</h1>
+			<div class="row">
+				<div class="col-lg-12">
+					<div class="card mb-4">
+						<div class="card-body">
+							<input type="file" id="bg-image-input" accept="image/*">
+							<input type="color" id="bg-color-picker" value="#FFFFFF">
+							<input type="text" id="custom-text-input" placeholder="Enter custom text">
+							<button id="add-text-button">Add Text</button>
+							<div id="card-designer"></div>
+							<button id="download-button">Download Card</button>		
+						</div>					
+					</div>
 				</div>
 			</div>
 		</div>
 	</div>
-</div>
+</body>
+</html>
