--- a/index.html
+++ b/index.html
@@ -4,25 +4,7 @@
 	<title></title>
 	<script src="./cards.js?ver=1.0.0"></script>
 	<script src="https://cdn.jsdelivr.net/npm/konva@9.0.0/konva.min.js"></script>
-	<style type="text/css">
-		#card-designer {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: space-between;
-			margin-top: 20px;
-			width: 400px;
-			height: 250px;
-			background: linear-gradient(135deg, #f5f5f5 0%, #dcdcdc 100%);
-			border-radius: 20px;
-			box-shadow: 0px 0px 6px rgba(0, 0, 0, 0.3);
-			overflow: hidden;
-			position: relative;
-		}
-		#bg-color-picker {
-			margin: 10px;
-		}
-	</style>
+	<link rel="stylesheet" type="text/css" href="./cards.css">
 </head>
 <body>
 	<div class="dashboard-scroll container">
@@ -38,7 +20,7 @@
 							<button id="add-text-button">Add Text</button>
 							<div id="card-designer"></div>
 							<button id="download-button">Download Card</button>		
-						</div>					
+						</div>
 					</div>
 				</div>
 			</div>
